# C4_coders

./: CMakeLists.txt  README.md  lista.h  lista_enlazada_c4coders.c  main.c  principio_tp_final.c  test1.c
TP_final/: especificaciones.md  exportar.c  limitaciones.md  principio_tp_final.c
TP_final/estudiantes/: cursada.c  cursada.h  cursadas.csv  estudiante.c  estudiante.h  listado.h  listados.c  main.c  materia.c  materia.h
TP_final/estudiantes/lista/: lista.c  lista.h
TP_final/estudiantes/test/: CMakeLists.test  test_estudiante.c
TP_final/estudiantes/util/: abb.c  abb.h  exportar.c  exportar.h
test/: test.c
tp final/: CMakeLists.txt  cursada.c  cursada.h  cursadas.csv  estudiante.c  estudiante.h  listado.h  listados.c  main.c  materia.c  materia.h
tp final/lista/: lista.c  lista.h
tp final/test/: CMakeLists.test  test_estudiante.c
tp final/util/: abb.c  abb.h  exportar.c  exportar.h
